# SuperBeavers-FoxSays

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  ingest_cli.py  main.py
backend/app/adapters/: openalex.py
backend/app/api/v1/: admin.py  ask.py  auth.py  compare.py  explain.py  explorer.py  export.py  gaps.py  graph.py  search.py  versions.py
backend/app/db/: neo4j_client.py  qdrant_client.py
backend/app/loaders/: archives.py  documents.py  structured.py  useful_info.py  web.py
backend/app/prompts/: experiment_extractor.py  explain.py  explain_edge.py  gap_hypothesis.py  ner_extractor.py  nl2cypher.py  query_parser.py  synthesizer.py
backend/app/services/: auth_service.py  auto_enrichment.py  compare_service.py  dictionary.py  doc_extraction_service.py  eval_service.py  export_service.py  gaps_service.py  geo.py  graph_matcher.py  graph_service.py  ingest_service.py  llm_service.py  ner_service.py  nl2cypher_service.py  normalize_service.py  path_service.py  query_parser.py  rag_service.py  snapshot_service.py  synthesizer.py  versioning_service.py
backend/tests/: conftest.py  test_cache_nl2cypher.py  test_eval_prf.py  test_loaders.py
backend/tests/fixtures/: labeled_snippets.jsonl
frontend/: jsconfig.json  next.config.mjs  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.jsx  page.jsx
frontend/src/lib/: api.js
runtime_backend/app/: __init__.py  config.py  main.py  models.py
runtime_frontend/: app.js  index.html  styles.css
(+20 files in other folders)
