[project]
name = "scientific-tangle-backend"
version = "0.3.0"
description = "Научный клубок — бэкенд для Норникель AI Science Hack 2026"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "neo4j>=5.25.0",
    "loguru>=0.7.2",
    "python-multipart>=0.0.12",
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.1",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
    "pdfplumber>=0.11.4",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "trafilatura>=1.12.2",
    "rapidfuzz>=3.10.0",
    "reportlab>=4.2.0",
    "rarfile>=4.2",
    "patool>=2.4.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.7.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
